--- a/index3.html
+++ b/index3.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>touch file 3</h1>
+    <p>The master branch is the main branch of the project that contains all the history of final changes. Every developer must be used to the master branch. The master branch contains
+         the source code of HEAD that always reflects a final version of the project.</p>
 </body>
 </html>
