--- a/feedback.html
+++ b/feedback.html
@@ -7,6 +7,8 @@
     <title>Feedback Page </title>
 </head>
 <body>
-    
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+     Natus tempore excepturi veniam quae sed rerum, itaque odio quis adipisci ex velit harum et!
+    Voluptate deserunt necessitatibus, velit praesentium temporibus nihil.</p>
 </body>
 </html>
